@@ -14,7 +14,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.2 2004/05/14 04:58:23 marka Exp $ */
+/* $Id: named.conf,v 1.2.2.2 2004/06/04 02:31:53 marka Exp $ */
 
 /*
  * Choose a keyname that is unlikely to clash with any real key names.
@@ -58,7 +58,7 @@ options {
 	recursion yes;
 	notify yes;
 	dnssec-enable yes;
-	dnssec-lookaside "dlv.utld";
+	dnssec-lookaside "." trust-anchor "dlv.utld";
 };
 
 zone "." { type hint; file "hints"; };
