@@ -14,7 +14,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.6 2004/03/10 02:19:54 marka Exp $ */
+/* $Id: named.conf,v 1.6.18.1 2004/06/04 02:31:53 marka Exp $ */
 
 // NS6
 
@@ -32,7 +32,7 @@ options {
 	notify yes;
 	disable-algorithms . { DSA; };
 	dnssec-enable yes;
-	dnssec-lookaside dlv;
+	dnssec-lookaside . trust-anchor dlv;
 };
 
 zone "." {
